Fix: Fixed background overflow issue

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -194,6 +194,7 @@
   font-size: 4.68rem;
   text-shadow: 0 0 6px white;
 }
+
 /* Only the text in about us content */
 #aboutus-text {
   color: rgba(237, 229, 187, 1);
@@ -203,87 +204,88 @@
 
 /* WOTM SECTION STYLING */
 .wotmWrapper {
-    padding: 10% 7%;
+  position: relative;
+  overflow: hidden;
+  padding: 10% 7%;
 }
 
 .wotmH1 {
-    font-family: 'Caveat';
-    font-weight: 400;
-    color: #00657C;
-    text-align: center;
-    letter-spacing: 0.1rem;
-    margin: 0 0 4.6rem;
-    font-size: 4.4rem;
+  font-family: 'Caveat';
+  font-weight: 400;
+  color: #00657C;
+  text-align: center;
+  letter-spacing: 0.1rem;
+  margin: 0 0 4.6rem;
+  font-size: 4.4rem;
 }
 
 .blueButton {
-    width: 14.3rem;
-    height: 4.6rem;
-    background-color: #00657C;
-    color: #FEFBF4;
-    margin: auto;
-    border-radius: 6.3rem;
-}
-
-.blueButton > p {
-    text-align: center;
-    font-size: 1.6rem;
-    font-weight: 500;
-    padding-top: 7%;
+  width: 14.3rem;
+  height: 4.6rem;
+  background-color: #00657C;
+  color: #FEFBF4;
+  margin: auto;
+  border-radius: 6.3rem;
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 500;
+  padding-top: 1.5%;
 }
 
 /* WOTM food items */
 .wotmSection {
-    display: flex;
-    flex-flow: row wrap;
-    width: 100%;
-    gap: 2%;
-    padding-bottom: 2.5rem;
-    justify-content: space-evenly;
-    margin: auto;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-flow: row wrap;
+  width: 100%;
+  gap: 2%;
+  padding-bottom: 2.5rem;
+  justify-content: space-evenly;
+  margin: auto;
 }
 
 .wotmFood {
-    width: 12rem;
-    height: 17rem;
-    text-align: center;
-    font-size: 1.9rem;
-    font-weight: normal;
-    color: #00657C;
+  width: 12rem;
+  height: 17rem;
+  text-align: center;
+  font-size: 1.9rem;
+  font-weight: normal;
+  color: #00657C;
 }
 
 .wotmFood > img {
-    max-width: 12rem;
+  max-width: 12rem;
 }
 
 .wotmFood > p {
-    width: 100%;
-    margin-bottom: 2.5rem;
+  width: 100%;
+  margin-bottom: 2.5rem;
 }
 
 /* WOTM background */
 .wotm {
-    background-color: #FEFBF4;
-    width: 100%;
-    box-shadow: inset  0  60px 60px -60px #696868, inset  0 -60px 60px -60px #696868;
+  background-color: #FEFBF4;
+  width: 100%;
+  box-shadow: inset  0  60px 60px -60px #696868, inset  0 -60px 60px -60px #696868;
 }
 
 .wotmBackground {
-    transform: rotate(-42.512deg);
-    z-index: 0;
-    position: absolute;
-    width: 70%;
-    height: 70%;
-    left: 50%;
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+  transform: rotate(-42.512deg);
+  z-index: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 30%;
+  left: 35%;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(5, 1fr);
 }
 
 .wotmBackground > img {
-    opacity: 0.13;
-    width: 7.8rem;
-    height: 5.8rem;
+  opacity: 0.13;
+  max-width: 12rem;
 }
 
 /*Menu styling*/
